--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 
 dependencies {
     def lifecycle_version = "2.2.0"
+    def cardView_version = "1.0.0"
     //gson
     implementation 'com.squareup.retrofit2:converter-gson:2.8.0'
     //retrofit
@@ -42,5 +43,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    // CardView
+     implementation "androidx.cardview:cardview:$cardView_version"
 
 }
