--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ android {
 dependencies {
     def lifecycle_version = "2.2.0"
     def cardView_version = "1.0.0"
+    def recyclerview_version = "1.1.0"
+    def glide_version = "4.11.0"
     //gson
     implementation 'com.squareup.retrofit2:converter-gson:2.8.0'
     //retrofit
@@ -45,5 +47,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
     // CardView
      implementation "androidx.cardview:cardview:$cardView_version"
+    //recycler view
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
+    //Glide Library
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
 }
