--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     def cardView_version = "1.0.0"
     def recyclerview_version = "1.1.0"
     def glide_version = "4.11.0"
+    def material_version = "1.2.1"
     //gson
     implementation 'com.squareup.retrofit2:converter-gson:2.8.0'
     //retrofit
@@ -52,5 +53,9 @@ dependencies {
     //Glide Library
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+    //Material Design
+    implementation "com.google.android.material:material:$material_version"
+    //Circle Image View
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
