--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+    implementation 'org.jetbrains:annotations:15.0'
     def lifecycle_version = "2.2.0"
     def cardView_version = "1.0.0"
     def recyclerview_version = "1.1.0"
@@ -57,5 +58,7 @@ dependencies {
     implementation "com.google.android.material:material:$material_version"
     //Circle Image View
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
